--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -29,39 +29,18 @@ parts:
     plugin: make
     after: [grub-prepare]
 
-  phoronix-test-suite:
-    plugin: nil
-    source: https://github.com/phoronix-test-suite/phoronix-test-suite.git
-    build-packages:
-      - wget
-    stage-packages: 
-      - php-cli
-      - php-xml
-    override-build: |
-      snapcraftctl build
-      mkdir -p $SNAPCRAFT_PART_INSTALL/bin
-      cp $SNAPCRAFT_PART_BUILD/phoronix-test-suite $SNAPCRAFT_PART_INSTALL/bin/phoronix-test-suite
-
-  lmbench:
-    plugin: nil
-    source: https://github.com/intel/lmbench.git
-    stage-packages:
-      - gcc
-      - perl
-      - libc6-dev
-      - libc6
+#  lmbench:
+#    plugin: nil
+#   source: https://github.com/intel/lmbench.git
+#   stage-packages:
+#     - gcc
+#     - perl
+#     - libc6-dev
+#     - libc6
 #    override-build: |
 #      snapcraftctl build
 #      mkdir -p $SNAPCRAFT_PART_INSTALL/bin
 #      cp $SNAPCRAFT_PART_BUILD/lmbench $SNAPCRAFT_PART_INSTALL/bin/lmbench
-
-apps:
-  phoronix-test-suite:
-    command: bin/phoronix-test-suite
-    environment:
-      LD_LIBRARY_PATH: $SNAP/usr/local/lib
-    plugs:
-      - home
 
 #  lmbench:
 #    command: 
